js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-not-extensible-args.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
import
(
'
'
'
'
)
;
}
